--- a/src/omo_r1_navigation2/param/omo_r1.yaml
+++ b/src/omo_r1_navigation2/param/omo_r1.yaml
@@ -63,8 +63,8 @@ bt_navigator:
     - nav2_compute_path_to_pose_action_bt_node
     - nav2_compute_path_through_poses_action_bt_node
     - nav2_follow_path_action_bt_node
-    - nav2_back_up_action_bt_node
-    - nav2_spin_action_bt_node
+    #- nav2_back_up_action_bt_node
+    #- nav2_spin_action_bt_node
     - nav2_wait_action_bt_node
     - nav2_clear_costmap_service_bt_node
     - nav2_is_stuck_condition_bt_node
@@ -117,49 +117,53 @@ controller_server:
     general_goal_checker:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.25
-      yaw_goal_tolerance: 0.25
+      
+      #목적지 도착 판정 범위
+      xy_goal_tolerance: 1.0 # 목표 도착 시 x-y 평면에서 허용하는 오차 범위(미터) 0.25
+      yaw_goal_tolerance: 1.0 # 회전(heading) 오차 0.25
 
     # DWB parameters
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: True
-      min_vel_x: 0.0
+      min_vel_x: -0.15 # 로봇의 x축(전진/후진) 최소/최대 속도를 지정
       min_vel_y: 0.0
-      max_vel_x: 0.6
+      max_vel_x: 0.60 # 로봇의 x축(전진/후진) 최소/최대 속도를 지정
       max_vel_y: 0.0
-      max_vel_theta: 1.0
+      max_vel_theta: 1.0 # 최대 회전 속도(라디안/초)를 설정/ 기존: 3.4
       min_speed_xy: 0.0
-      max_speed_xy: 0.30
+      max_speed_xy: 0.60 # x-y 평면에서의 최대 선형 속도를 제한
       min_speed_theta: 0.0
       # Add high threshold velocity for turtlebot 3 issue.
       # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
-      acc_lim_x: 0.07
+      acc_lim_x: 0.15 # 선형 가속/감속 한계로, 값을 높이면 더 빠른 속도 변화가 가능해집니다.
       acc_lim_y: 0.0
       acc_lim_theta: 1.0
-      decel_lim_x: -0.07
+      decel_lim_x: -0.15 # 선형 가속/감속 한계로, 값을 높이면 더 빠른 속도 변화가 가능해집니다.
       decel_lim_y: 0.0
       decel_lim_theta: -1.0
       vx_samples: 20
       vy_samples: 5
       vtheta_samples: 20
-      sim_time: 1.7
-      linear_granularity: 0.05
+      sim_time: 2.2
+      linear_granularity: 0.10 # 체크 포인트(경로 포인트) 간격 기존 0.05
       angular_granularity: 0.025
       transform_tolerance: 0.1 #0.2
-      xy_goal_tolerance: 0.05 #0.25
+      xy_goal_tolerance: 0.10 # 기존: 0.05
       trans_stopped_velocity: 0.25
       short_circuit_trajectory_evaluation: True
       stateful: True
-      critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
+      critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"] # "RotateToGoal" 일단 제거
       BaseObstacle.scale: 0.02
-      PathAlign.scale: 32.0
-      PathAlign.forward_point_distance: 0.1
-      GoalAlign.scale: 24.0
-      GoalAlign.forward_point_distance: 0.1
+      PathAlign.scale: 20.0
+      PathAlign.forward_point_distance: 0.3
+      GoalAlign.scale: 16.0
+      GoalAlign.forward_point_distance: 0.3
       PathDist.scale: 32.0
       GoalDist.scale: 24.0
-      RotateToGoal.scale: 32.0
+      RotateToGoal:
+        scale: 10.0 # 회전에 대한 영향 감소/ 기존 값: 32.0
+        slowing_factor: 6.0 # 회전 시 서서히 감속하도록 조정
       RotateToGoal.slowing_factor: 5.0
       RotateToGoal.lookahead_time: -1.0
 
@@ -170,7 +174,7 @@ controller_server_rclcpp_node:
 local_costmap:
   local_costmap:
     ros__parameters:
-      update_frequency: 5.0
+      update_frequency: 3.0
       publish_frequency: 2.0
       global_frame: odom
       robot_base_frame: base_link
@@ -178,13 +182,13 @@ local_costmap:
       rolling_window: true
       width: 3
       height: 3
-      resolution: 0.05
-      robot_radius: 0.6 # 0.5
+      resolution: 0.1
+      robot_radius: 0.50 # 실제 로봇 반지름 / 기존 0.15
       plugins: ["obstacle_layer", "voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        inflation_radius: 0.5 # 0.3
-        cost_scaling_factor: 3.0
+        inflation_radius: 2.0 # 높을 수록 장애물에 더 떨어져서 주행함 0.5
+        cost_scaling_factor: 2.0
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -233,8 +237,8 @@ global_costmap:
       global_frame: map
       robot_base_frame: base_link
       use_sim_time: True
-      robot_radius: 0.6 # 0.5
-      resolution: 0.05
+      robot_radius: 0.15 # 0.5
+      resolution: 0.1
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "voxel_layer", "inflation_layer"]
       obstacle_layer:
@@ -276,7 +280,7 @@ global_costmap:
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
+        cost_scaling_factor: 2.0
         inflation_radius: 0.5 # 0.3
       always_send_full_costmap: True
   global_costmap_client:
@@ -319,11 +323,13 @@ recoveries_server:
     costmap_topic: local_costmap/costmap_raw
     footprint_topic: local_costmap/published_footprint
     cycle_frequency: 10.0
-    recovery_plugins: ["spin", "backup", "wait"]
-    spin:
-      plugin: "nav2_recoveries/Spin"
-    backup:
-      plugin: "nav2_recoveries/BackUp"
+    recovery_plugins: ["wait"] # "spin", "backup",
+    
+    #spin:
+    #  plugin: "nav2_recoveries/Spin"
+    #backup:
+    #  plugin: "nav2_recoveries/BackUp"
+    
     wait:
       plugin: "nav2_recoveries/Wait"
     global_frame: odom
