--- a/src/omo_r1_navigation2/param/omo_r1.yaml
+++ b/src/omo_r1_navigation2/param/omo_r1.yaml
@@ -136,12 +136,12 @@ controller_server:
       min_speed_theta: 0.0
       # Add high threshold velocity for turtlebot 3 issue.
       # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
-      acc_lim_x: 0.15 # 선형 가속/감속 한계로, 값을 높이면 더 빠른 속도 변화가 가능해집니다.
+      acc_lim_x: 0.05 # 선형 가속/감속 한계로, 값을 높이면 더 빠른 속도 변화가 가능해집니다.
       acc_lim_y: 0.0
-      acc_lim_theta: 1.0
-      decel_lim_x: -0.15 # 선형 가속/감속 한계로, 값을 높이면 더 빠른 속도 변화가 가능해집니다.
+      acc_lim_theta: 0.5 # 회전 가속 제한
+      decel_lim_x: -0.05 # 선형 가속/감속 한계로, 값을 높이면 더 빠른 속도 변화가 가능해집니다.
       decel_lim_y: 0.0
-      decel_lim_theta: -1.0
+      decel_lim_theta: -0.5 # 회전 감속 제한
       vx_samples: 20
       vy_samples: 5
       vtheta_samples: 20
@@ -237,7 +237,7 @@ global_costmap:
       global_frame: map
       robot_base_frame: base_link
       use_sim_time: True
-      robot_radius: 0.15 # 0.5
+      robot_radius: 0.5 # 0.5
       resolution: 0.1
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "voxel_layer", "inflation_layer"]
@@ -281,7 +281,7 @@ global_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 2.0
-        inflation_radius: 0.5 # 0.3
+        inflation_radius: 1.5 # 0.3
       always_send_full_costmap: True
   global_costmap_client:
     ros__parameters:
@@ -303,16 +303,18 @@ map_saver:
     occupied_thresh_default: 0.65
     map_subscribe_transient_local: True
 
+
 planner_server:
-  ros__parameters:
-    expected_planner_frequency: 20.0
-    use_sim_time: False
-    planner_plugins: ["GridBased"]
-    GridBased:
-      plugin: "nav2_navfn_planner/NavfnPlanner"
-      tolerance: 0.5
-      use_astar: false
-      allow_unknown: true
+ ros__parameters:
+   expected_planner_frequency: 20.0
+   use_sim_time: False
+   planner_plugins: ["GridBased"]
+   GridBased:
+     plugin: "nav2_navfn_planner/NavfnPlanner"
+     tolerance: 0.5
+     use_astar: false
+     allow_unknown: true
+
 
 planner_server_rclcpp_node:
   ros__parameters:
