--- a/src/omo_r1_navigation2/param/omo_r1.yaml
+++ b/src/omo_r1_navigation2/param/omo_r1.yaml
@@ -280,8 +280,8 @@ global_costmap:
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 2.0
-        inflation_radius: 1.5 # 0.3
+        cost_scaling_factor: 1.0
+        inflation_radius: 5.0 # 0.3 => 1.5
       always_send_full_costmap: True
   global_costmap_client:
     ros__parameters:
