--- a/src/omo_r1_navigation2/param/omo_r1.yaml
+++ b/src/omo_r1_navigation2/param/omo_r1.yaml
@@ -126,11 +126,11 @@ controller_server:
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: True
-      min_vel_x: 1.0 # 로봇의 x축(전진/후진) 최소/최대 속도를 지정
+      min_vel_x: 0.0 # 로봇의 x축(전진/후진) 최소/최대 속도를 지정
       min_vel_y: 0.0
       max_vel_x: 1.0 # 로봇의 x축(전진/후진) 최소/최대 속도를 지정
       max_vel_y: 0.0
-      max_vel_theta: 1.0 # 최대 회전 속도(라디안/초)를 설정/ 기존: 3.4
+      max_vel_theta: 3.4 # 최대 회전 속도(라디안/초)를 설정/ 기존: 3.4
       min_speed_xy: 0.0
       max_speed_xy: 1.2 #형 가속/감속 한계로, 값을 높이면 더 빠른 속도 변화가 가능해집니다. # x-y 평면에서의 최대 선형 속도를 제한
       min_speed_theta: 0.0
@@ -138,16 +138,16 @@ controller_server:
       # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
       acc_lim_x: 0.01 # 선형 가속/감속 한계로, 값을 높이면 더 빠른 속도 변화가 가능해집니다.
       acc_lim_y: 0.0
-      acc_lim_theta: 0.5 # 회전 가속 제한
+      acc_lim_theta: 0.4 # 회전 가속 제한
       decel_lim_x: -0.01 # 선형 가속/감속 한계로, 값을 높이면 더 빠른 속도 변화가 가능해집니다.
       decel_lim_y: 0.0
-      decel_lim_theta: -0.5 # 회전 감속 제한
+      decel_lim_theta: -0.4 # 회전 감속 제한
       vx_samples: 20
       vy_samples: 5
       vtheta_samples: 20
       sim_time: 1.0
       linear_granularity: 0.45 # 체크 포인트(경로 포인트) 간격 기존 0.05
-      angular_granularity: 0.025
+      angular_granularity: 0.05
       transform_tolerance: 0.1 #0.2
       xy_goal_tolerance: 0.10 # 기존: 0.05
       trans_stopped_velocity: 0.25
@@ -156,14 +156,14 @@ controller_server:
       critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"] # "RotateToGoal" 일단 제거
       BaseObstacle.scale: 0.02
       PathAlign.scale: 20.0
-      PathAlign.forward_point_distance: 1.2
+      PathAlign.forward_point_distance: 1.2 #0.85
       GoalAlign.scale: 16.0
-      GoalAlign.forward_point_distance: 0.7
+      GoalAlign.forward_point_distance: 0.7 #0.55
       PathDist.scale: 32.0
       GoalDist.scale: 24.0
-      RotateToGoal:
-        scale: 10.0 # 회전에 대한 영향 감소/ 기존 값: 32.0
-        slowing_factor: 8.0 # 회전 시 서서히 감속하도록 조정
+      RotateToGoal: 32.0
+        # scale: 10.0 # 회전에 대한 영향 감소/ 기존 값: 32.0
+        # slowing_factor: 8.0 # 회전 시 서서히 감속하도록 조정
       RotateToGoal.slowing_factor: 5.0
       RotateToGoal.lookahead_time: -1.0
 
@@ -180,14 +180,14 @@ local_costmap:
       robot_base_frame: base_link
       use_sim_time: False
       rolling_window: true
-      width: 5
-      height: 5
+      width: 7
+      height: 7
       resolution: 0.1
       robot_radius: 1.0 # 실제 로봇 반지름 / 기존 0.15
       plugins: ["obstacle_layer", "voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        inflation_radius: 1.5 # 높을 수록 장애물에 더 떨어져서 주행함 0.5
+        inflation_radius: 1.0 # 높을 수록 장애물에 더 떨어져서 주행함 0.5
         cost_scaling_factor: 2.0
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
