--- a/src/omo_r1_navigation2/param/omo_r1.yaml
+++ b/src/omo_r1_navigation2/param/omo_r1.yaml
@@ -91,7 +91,7 @@ controller_server:
       rotate_to_goal_heading: True
     
       debug_trajectory_details: True
-      min_vel_x: 0.01 # 로봇의 x축(전진/후진) 최소/최대 속도를 지정
+      min_vel_x: 0.05 # 로봇의 x축(전진/후진) 최소/최대 속도를 지정
       min_vel_y: 0.0
       max_vel_x: 0.3 # 로봇의 x축(전진/후진) 최소/최대 속도를 지정
       max_vel_y: 0.0
@@ -111,10 +111,10 @@ controller_server:
       vy_samples: 5
       vtheta_samples: 20
       sim_time: 1.0
-      linear_granularity: 0.45 # 체크 포인트(경로 포인트) 간격 기존 0.05
+      linear_granularity: 0.5 # 체크 포인트(경로 포인트) 간격 기존 0.05
       angular_granularity: 0.05
       transform_tolerance: 0.1 #0.2
-      xy_goal_tolerance: 0.10 # 기존: 0.05
+      xy_goal_tolerance: 0.20 # 기존: 0.05
       trans_stopped_velocity: 0.25
       short_circuit_trajectory_evaluation: True
       stateful: True
@@ -142,8 +142,8 @@ controller_server_rclcpp_node:
 local_costmap:
   local_costmap:
     ros__parameters:
-      update_frequency: 3.0
-      publish_frequency: 2.0
+      update_frequency: 5.0
+      publish_frequency: 5.0
       global_frame: odom
       robot_base_frame: base_link
       use_sim_time: False
@@ -151,11 +151,11 @@ local_costmap:
       width: 7
       height: 7
       resolution: 0.1
-      robot_radius: 1.0 # 실제 로봇 반지름 / 기존 0.15
+      robot_radius: 0.5 # 실제 로봇 반지름 / 기존 0.15
       plugins: ["obstacle_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        inflation_radius: 1.0 # 높을 수록 장애물에 더 떨어져서 주행함 fixed value: 1.0
+        inflation_radius: 1.8 # 높을 수록 장애물에 더 떨어져서 주행함 fixed value: 1.0
         cost_scaling_factor: 2.0
 
       obstacle_layer:
@@ -170,17 +170,17 @@ local_costmap:
         scan:
           topic: /scan  # 센서 데이터 토픽 이름
           sensor_frame: lidar_link  # 비워두면 메시지에서 frame_id 사용
-          observation_persistence: 0.5  # 센서 데이터 유지 시간 (s)
-          expected_update_rate: 10.0  # 예상 갱신 주기 (s)
+          observation_persistence: 0.0  # 센서 데이터 유지 시간 (s)
+          expected_update_rate: 0.5  # 예상 갱신 주기 (s)
           data_type: "LaserScan"  # LaserScan 또는 PointCloud2
 
-          min_obstacle_height: 0.0  # 최소 장애물 높이
-          max_obstacle_height: 2.0  # 최대 장애물 높이
+          min_obstacle_height: 2.0  # 최소 장애물 높이
+          max_obstacle_height: 10.0 # 최대 장애물 높이
 
           ###### Try point!!!!!!!
-          inf_is_valid: True  # inf 값을 유효한 거리로 인정할지
+          inf_is_valid: False  # inf 값을 유효한 거리로 인정할지
           marking: True  # 장애물로 마킹할지
-          clearing: False  # 자유 공간으로 클리어할지
+          clearing: True  # 자유 공간으로 클리어할지
 
           obstacle_max_range: 3.0  # 장애물 마킹 최대 거리
           obstacle_min_range: 0.0  # 장애물 마킹 최소 거리
@@ -201,12 +201,12 @@ local_costmap:
 global_costmap:
   global_costmap:
     ros__parameters:
-      update_frequency: 1.0
-      publish_frequency: 1.0
+      update_frequency: 5.0
+      publish_frequency: 5.0
       global_frame: map
       robot_base_frame: base_link
       use_sim_time: True
-      robot_radius: 0.8 # 0.5
+      robot_radius: 0.5 # 0.5
       resolution: 0.1
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]   
@@ -223,17 +223,17 @@ global_costmap:
         scan:
           topic: /scan  # 센서 데이터 토픽 이름
           sensor_frame: lidar_link  # 비워두면 메시지에서 frame_id 사용
-          observation_persistence: 0.5  # 센서 데이터 유지 시간 (s)
-          expected_update_rate: 10.0  # 예상 갱신 주기 (s)
+          observation_persistence: 0.0  # 센서 데이터 유지 시간 (s)
+          expected_update_rate: 0.5  # 예상 갱신 주기 (s)
           data_type: "LaserScan"  # LaserScan 또는 PointCloud2
 
           min_obstacle_height: 0.0  # 최소 장애물 높이
           max_obstacle_height: 2.0  # 최대 장애물 높이
 
           ###### Try point!!!!!!!
-          inf_is_valid: True  # inf 값을 유효한 거리로 인정할지
+          inf_is_valid: False  # inf 값을 유효한 거리로 인정할지
           marking: True  # 장애물로 마킹할지
-          clearing: False  # 자유 공간으로 클리어할지
+          clearing: True  # 자유 공간으로 클리어할지
 
           obstacle_max_range: 3.0  # 장애물 마킹 최대 거리
           obstacle_min_range: 0.0  # 장애물 마킹 최소 거리
@@ -247,7 +247,7 @@ global_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 2.0
-        inflation_radius: 4.0 # 0.3
+        inflation_radius: 1.8 # 0.3
       always_send_full_costmap: True
   global_costmap_client:
     ros__parameters:
