--- a/src/omo_r1_navigation2/param/omo_r1.yaml
+++ b/src/omo_r1_navigation2/param/omo_r1.yaml
@@ -75,7 +75,7 @@ controller_server:
       plugin: "nav2_controller::SimpleGoalChecker"
       
       #목적지 도착 판정 범위
-      xy_goal_tolerance: 0.2 # 목표 도착 시 x-y 평면에서 허용하는 오차 범위(미터) 0.25
+      xy_goal_tolerance: 0.25 # 목표 도착 시 x-y 평면에서 허용하는 오차 범위(미터) 0.25
       yaw_goal_tolerance: 7.0 # 회전(heading) 오차 0.25
 
     # DWB parameters
@@ -139,65 +139,6 @@ controller_server_rclcpp_node:
   ros__parameters:
     use_sim_time: False
 
-local_costmap:
-  local_costmap:
-    ros__parameters:
-      update_frequency: 10.0
-      publish_frequency: 5.0
-      global_frame: odom
-      robot_base_frame: base_link
-      use_sim_time: False
-      rolling_window: true
-      width: 7
-      height: 7
-      resolution: 0.1
-      robot_radius: 0.4 # 실제 로봇 반지름 / 기존 0.15
-      plugins: ["obstacle_layer", "inflation_layer"]
-      inflation_layer:
-        plugin: "nav2_costmap_2d::InflationLayer"
-        inflation_radius: 1.8 # 높을 수록 장애물에 더 떨어져서 주행함 fixed value: 1.0
-        cost_scaling_factor: 2.0
-
-      obstacle_layer:
-        plugin: "nav2_costmap_2d::ObstacleLayer"
-
-        enabled: true  # 장애물 레이어 사용 여부
-        footprint_clearing_enabled: true  # 로봇 발 밑 장애물 제거
-        combination_method: 1  # 0: 덮어쓰기, 1: 최대값 사용, 2: unknown만 덮기
-
-        observation_sources: scan  # 사용 센서 이름 (공백 없이 나열)
-        
-        scan:
-          topic: /scan  # 센서 데이터 토픽 이름
-          sensor_frame: lidar_link  # 비워두면 메시지에서 frame_id 사용
-          observation_persistence: 0.0  # 센서 데이터 유지 시간 (s)
-          expected_update_rate: 10.0  # 예상 갱신 주기 (s)
-          data_type: "LaserScan"  # LaserScan 또는 PointCloud2
-
-          min_obstacle_height: 0.0  # 최소 장애물 높이
-          max_obstacle_height: 10.0 # 최대 장애물 높이
-
-          ###### Try point!!!!!!!
-          inf_is_valid: False  # inf 값을 유효한 거리로 인정할지
-          marking: True  # 장애물로 마킹할지
-          clearing: False  # 자유 공간으로 클리어할지
-
-          obstacle_max_range: 3.0  # 장애물 마킹 최대 거리
-          obstacle_min_range: 0.0  # 장애물 마킹 최소 거리
-
-          raytrace_max_range: 0.0  # 레이 트레이싱 최대 거리 (자유 공간 탐색)
-          raytrace_min_range: 0.0  # 레이 트레이싱 최소 거리
-    
-      static_layer:
-        map_subscribe_transient_local: True
-      always_send_full_costmap: True
-  local_costmap_client:
-    ros__parameters:
-      use_sim_time: False
-  local_costmap_rclcpp_node:
-    ros__parameters:
-      use_sim_time: False
-
 global_costmap:
   global_costmap:
     ros__parameters:
@@ -215,7 +156,7 @@ global_costmap:
         plugin: "nav2_costmap_2d::ObstacleLayer"
 
         enabled: true  # 장애물 레이어 사용 여부
-        footprint_clearing_enabled: true  # 로봇 발 밑 장애물 제거
+        footprint_clearing_enabled: false  # 로봇 발 밑 장애물 제거
         combination_method: 1  # 0: 덮어쓰기, 1: 최대값 사용, 2: unknown만 덮기
 
         observation_sources: scan  # 사용 센서 이름 (공백 없이 나열)
